# LASSI-Analysis

./: .gitignore  README.md  distances_matrix_development.ipynb  pyproject.toml  setup.cfg  simple_yet_VERY_important_test--(import_example).ipynb
lassi_analysis/utils/: dataFrame_functions.py
test-data/: csvtest.csv  test.lammpstrj
utils/: basic_function_test.ipynb  dataFrame_functions.py  parseToFile.py
