[metadata]
name = LASSI-Analysis
version = 0.0.1
author = Onur Kara
author_email = okara83@gmail.com
description = Fill in Sam
long_description = file: README.md
url = https://github.com/okara83/LASSI-Analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = lassi_analysis
packages = find:
python_requires = >=3.0

[options.packages.find]
where = lassi_analysis